# gtk-player

./: README.md  gtk-player.cabal  gtk-videoplayer.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Graphics/UI/Gtk/: Player.hs
