name:                gtk-player
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/noughtmare/gtk-videoplayer#readme
license:             GPL-3
license-file:        LICENSE
author:              Jaro Reinders
copyright:           Copyright: (c) 2016 Jaro Reinders
category:            GUI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.UI.Gtk.Player
  build-depends:       base >= 4.7 && < 5
                     , gtk
                     , gstreamer
                     , glib
                     , xoverlay
                     , mtl
                     , text
                     , transformers
  default-language:    Haskell2010

executable testplayer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gtk-player
                     , gstreamer
                     , gtk
                     , glib
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noughtmare/gtk-videoplayer
